fix some styles on firefox

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -106,7 +106,7 @@
 
 .user-actions {
     background: #2b5294;
-    height: -webkit-fill-available;
+    height: inherit;
     display: flex;
     align-items: center;
     padding-left: 1.5rem;
